<resources>
    <string name="app_name">ServingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button" />
    <string name="success">Success!</string>
    <string name="cost">Cost</string>
    <string name="name">Name</string>
    <string name="num">Num</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="table_no">Table no.</string>
    <string name="Cash">현금</string>
    <string name="Naming">이름달기</string>
    <string name="Copyright">Made by Cho.S.H &amp; Jung.J.H</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Menu_rank">메뉴 순위</string>
    <string name="Cost_rank">금액 순위</string>
    <string name="check">Check</string>
    <string name="complete">Complete</string>
    <string name="main_image">main_image</string>
    <string name="cse_ordering_application">CSE Ordering Application</string>
    <string name="navigation_header_image">Navigation_header_image</string>
    <string name="Total">총액</string>
    <string name="ordering_by">Ordered by(주문한 사람)</string>
</resources>
