<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_menu_name_receipt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/name"
            android:gravity="left|center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_menu_price_receipt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center"
            android:paddingEnd="45dp"
            android:text="@string/cost"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_menu_num_receipt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center"
            android:paddingStart="40dp"
            android:paddingEnd="5dp"
            android:text="@string/num"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_pay"
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"/>
    </LinearLayout>
</LinearLayout>